[package]
name = "rust-blink-arduino-uno"
version = "0.1.0"
authors = ["GabrielBernardoDaSilva <gabriel7798@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-blink-arduino-uno"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
hd44780-driver = "0.4.0"
avr-device = "0.5.3"

[dependencies.string_buf_emb_rs_lib]
path = "../string_buf_emb_rs_lib"



[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
